--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"message"
 	],
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
 		"build": "rollup -c",
 		"test": "jest --passWithNoTests --coverage",
@@ -24,19 +25,19 @@
 		"lcov-parse": "^1.0.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.8.6",
-		"@babel/node": "^7.8.4",
-		"@babel/preset-env": "^7.12.11",
-		"@rollup/plugin-commonjs": "^11.0.2",
-		"@rollup/plugin-json": "^4.0.2",
-		"@rollup/plugin-node-resolve": "^7.1.1",
-		"babel-jest": "^25.1.0",
+		"@babel/core": "^7.21.0",
+		"@babel/node": "^7.20.7",
+		"@babel/preset-env": "^7.20.2",
+		"@rollup/plugin-commonjs": "^24.0.1",
+		"@rollup/plugin-json": "^6.0.0",
+		"@rollup/plugin-node-resolve": "^15.0.1",
+		"babel-jest": "^29.4.3",
 		"core-js": "3",
-		"jest": "^25.1.0",
-		"prettier": "^1.19.1",
-		"regenerator-runtime": "^0.13.3",
-		"rollup": "^1.32.0",
-		"rollup-plugin-node-externals": "^2.1.3"
+		"jest": "^29.4.3",
+		"prettier": "^2.8.4",
+		"regenerator-runtime": "^0.13.11",
+		"rollup": "^3.18.0",
+		"rollup-plugin-node-externals": "^5.1.2"
 	},
 	"babel": {
 		"presets": [
